deploy-maria-vol.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-new-deployment
  labels:
    app: mariadb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /usr/lib/mysql
          name: mariadb-pv

      volumes:
      - name: mariadb-pv
        persistentVolumeClaim:
          claimName: pv-claim
