mariadb-nfs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb
spec:
  containers:
  - name: mariadb
    image: mariadb:latest
    ports:
        - containerPort: 3306
    volumeMounts:
    - mountPath: /usr/lib/mysql
      name: mariadb-nfs
  
  volumes:
  - name: mariadb-nfs
    persistentVolumeClaim:
      claimName: nfs-pvc-test #pvc got storage from nfs server
