mariadb-pvc-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: maria-pod
spec:
  containers:
    - name: database
      image: mariadb
      volumeMounts:
      - mountPath: "/var/lib/mysql"
        name: maria-vol
  volumes:
    - name: maria-vol
      persistentVolumeClaim:
        claimName: maria-pvc
