mariadb-vol.yml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb
spec:
  containers:
  - name: mariadb
    image: mariadb:latest
    ports:
        - containerPort: 3306
    volumeMounts:
    - mountPath: /usr/lib/mysql
      name: mariadb-pv
  
  volumes:
  - name: mariadb-pv
    persistentVolumeClaim:
      claimName: pv-claim
