mew-pov-pvc-pv.yml
apiVersion: v1
kind: Pod
metadata:
  name: new-pvc-pod
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/var/www/html"
        name: new-pod-pvc
  volumes:
    - name: new-pod-pvc
      persistentVolumeClaim:
        claimName: block-pvc
