mydb-sc-nfs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: maria-pod-new
spec:
  containers:
    - name: newdb
      image: mariadb
      volumeMounts:
      - mountPath: "/var/lib/mysql"
        name: ourdb
  volumes:
    - name: ourdb
      persistentVolumeClaim:
        claimName: claim-pvc
