nginx-cm-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-cm-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    volumeMounts:
      - name: data-file
        mountPath: /usr/share/nginx/html
  volumes:
    - name: data-file
      configMap:
        name: nginx-data
