node-affinity.yml
apiVersion: v1
kind: Pod
metadata:
  name: with-node-affinity
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: disk
            operator: In
            values:
            - sssd
            - nvme
          - key: state
            operator: In
            values:
            - gaza
            

  containers:
  - name: with-node-affinity
    image: registry.k8s.io/pause:2.0
