node-selector-assign-to-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  nodeSelector:
    disk: ssd
