vol-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-example-linux
spec:
  containers:
  - name: example-container
    image: nginx:latest
    volumeMounts:
    - mountPath: /foo
      name: example-volume
      readOnly: false
  volumes:
  - name: example-volume
    hostPath:
      path: /data/foo # directory location on host
      type: Directory # this field is optional
