service.yml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  selector:
    app: kuard
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
